# FCE

./: .clang-format  .gitignore  CMakeLists.txt  LICENSE  README.md  fce.doxygen
.devcontainer/: Dockerfile  devcontainer.json
.github/workflows/: cmake-single-platform.yml
assets/: castle.fen  enpassant.fen  game.fen  kingspawngame.fen  min1.fen  min2.fen  min22.fen  min3.fen  min33.fen  min4.fen  min5.fen  min6.fen  openbishop.fen  pawn.fen
cmake/: gprof.cmake
documentation/: documentation.aux  documentation.tex
src/: CMakeLists.txt  Makefile  fce  fce.c  fce.cpp  fce.h  fce_bitboard.c  fce_bitboard.h  fce_util.h
src/bitboard/: CMakeLists.txt  bitboard.hpp
src/game/: CMakeLists.txt  bitboard.hpp  board.cpp  board.hpp  core.cpp  core.hpp  fen.cpp  fen.hpp  game.hpp  util.hpp
src/magics/: CMakeLists.txt  magics.cpp
src/position/: CMakeLists.txt  bitboard.cpp  bitboard.hpp  chess.hpp  core.cpp  core.hpp  fen.cpp  fen.hpp  logger.cpp  logger.hpp  magic.cpp  magic.hpp  move.hpp  position.cpp  position.hpp  square.cpp  square.hpp  transposition.cpp  transposition.hpp  util.cpp  util.hpp  zobrist.cpp  zobrist.hpp
src/position/core/: CMakeLists.txt  bitboard.cpp  bitboard.hpp  chess.cpp  chess.hpp  logger.cpp  logger.hpp  square.cpp  square.hpp  util.cpp  util.hpp
