add_compile_options(-Wall -Wextra -Wpedantic)
set(CMAKE_CXX_STANDARD 20)
set(CMAKE_CXX_CLANG_TIDY clang-tidy -checks=-*,readability-*,performance-*,modernize-*,bugprone-*,cppcoreguidelines-*)
add_subdirectory(position)
add_subdirectory(magics)
target_link_libraries(magics position)

add_executable(fce fce.cpp)
if(${CMAKE_BUILD_TYPE} STREQUAL "Release")
    set_property(TARGET fce PROPERTY INTERPROCEDURAL_OPTIMIZATION TRUE)
endif()
target_link_libraries(fce position)
